Task 6 and 7 complete

--- a/rotten_mangoes/app/views/movies/_form.html.erb
+++ b/rotten_mangoes/app/views/movies/_form.html.erb
@@ -1,4 +1,17 @@
 <%= form_for @movie do |f| %>
+  <!-- ActiveRecord error handle -->
+  <% if @movie.errors.any? %>
+    <div>
+      <%= pluralize(@movie.errors.count, "error") %> prevented this movie from being submitted:
+      <ul>
+        <% @movie.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <!-- / ActiveRecord error handle -->
+
   <div>
     <%= f.label "title" %><br>
     <%= f.text_field "title" %>
