--- a/rotten_mangoes/app/views/movies/_form.html.erb
+++ b/rotten_mangoes/app/views/movies/_form.html.erb
@@ -29,9 +29,14 @@
     <%= f.number_field "runtime_in_minutes" %>
   </div>
   <div>
-    <%= f.label "poster_image_url" %><br>
-    <%= f.text_field "poster_image_url" %>
+    <%= f.label "category" %><br>
+    <%= f.text_field "category" %>
   </div>
+  <div>
+  <%= f.label "Upload Photo:" %><br>
+    <%= f.file_field "image" %>
+  </div>
+
   <div>
     <%= f.label "description" %><br>
     <%= f.text_area "description" %>
