--- a/rotten_mangoes/app/views/admin/users/index.html.erb
+++ b/rotten_mangoes/app/views/admin/users/index.html.erb
@@ -2,11 +2,30 @@
 
 <hr>
 <% @users.each do |user| %>
-  <%= user.inspect %>
+	<tr>
+	<td>
+  	<li> ID: <%= user.id %></li>
+  	<li> FIRST: <%= user.firstname %></li>
+  	<li> LAST: <%= user.lastname %></li>
+  	<li> EMAIL: <%= user.email %></li>
+  	<li> DATE CREATED: <%= user.created_at %></li>
+    <li> ADMIN: <%= user.admin %></li>
+  	<li> <%= link_to "Edit", edit_admin_user_path(user) %></li>
+  	<li><%= link_to "Delete", admin_user_path(user), method: :delete, confirm: "Are you sure you want to delete #{user.firstname} #{user.lastname}?" %></h2> </li>
+
+	</td>
+	</tr>
   <br><br>
 <% end %>
 
+<%= link_to "Add a new user", new_admin_user_path %>
+<br>
+<br>
 
 <%= paginate @users %>
+
+
+
+
 
 
