--- a/rotten_mangoes/app/views/movies/index.html.erb
+++ b/rotten_mangoes/app/views/movies/index.html.erb
@@ -5,11 +5,12 @@
 <% @movies.each do |movie| %>
   <%= image_tag movie.image_url(:thumb) %>
   <h2><%= link_to movie.title, movie_path(movie) %></h2>
+  <h3>Genre: <%= movie.category %></h3>
   <% if movie.reviews.size > 0 %>
-	<h3>Avg. Rating: <%= movie.review_average %>/10</h3>
+    <h3>Avg. Rating: <%= movie.review_average %>/10</h3>
 	<% else %>
-	This movie does not have any reviews yet.
-<% end %>
+    <h3>Avg. Rating: This movie does not have any reviews yet.</h3>
+  <% end %>
   <h3><%= formatted_date(movie.release_date) %></h3>
   <h4>Dir. <%= movie.director %> | <%= movie.runtime_in_minutes %> minutes</h4>
   <p><%= movie.description %></p>
