--- a/rotten_mangoes/app/views/admin/users/index.html.erb
+++ b/rotten_mangoes/app/views/admin/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Rotten Mangoes User List</h1>
+<%= link_to "Back to Movies", movies_path %>
 
 <hr>
 <% @users.each do |user| %>
@@ -21,7 +22,6 @@
 <%= link_to "Add a new user", new_admin_user_path %>
 <br>
 <br>
-
 <%= paginate @users %>
 
 
