--- a/rotten_mangoes/app/views/movies/_form.html.erb
+++ b/rotten_mangoes/app/views/movies/_form.html.erb
@@ -33,10 +33,12 @@
     <%= f.text_field "category" %>
   </div>
   <div>
-  <%= f.label "Upload Photo:" %><br>
+  <%= f.label "Upload Image:" %>
     <%= f.file_field "image" %>
   </div>
-
+    <%= f.label "remote_image_url", "or URL of image" %>
+    <%= f.text_field "remote_image_url" %>
+  </div>
   <div>
     <%= f.label "description" %><br>
     <%= f.text_area "description" %>
