--- a/rotten_mangoes/app/views/admin/users/index.html.erb
+++ b/rotten_mangoes/app/views/admin/users/index.html.erb
@@ -12,7 +12,7 @@
   	<li> DATE CREATED: <%= user.created_at %></li>
     <li> ADMIN: <%= user.admin %></li>
   	<li> <%= link_to "Edit", edit_admin_user_path(user) %></li>
-  	<li><%= link_to "Delete", admin_user_path(user), method: :delete, confirm: "Are you sure you want to delete #{user.firstname} #{user.lastname}?" %></h2> </li>
+  	<li><%= link_to "Delete", admin_user_path(user), method: :delete, data: { 'confirm' => "Are you sure you want to delete #{user.firstname} #{user.lastname}?" } %></h2> </li>
 
 	</td>
 	</tr>
