--- a/rotten_mangoes/app/views/movies/show.html.erb
+++ b/rotten_mangoes/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Back to all movies", movies_path %><br/>
 
 <%= image_tag @movie.image_url(:fullsize) %>
-<h2><%= @movie.title %> (<%= link_to "edit", edit_movie_path(@movie) %>, <%= link_to "delete", movie_path(@movie), method: :delete, confirm: "You sure?" %>)</h2>
+<h2><%= @movie.title %> (<%= link_to "edit", edit_movie_path(@movie) %>, <%= link_to "delete", movie_path(@movie), method: :delete, data: { 'confirm' => "Are you sure you want to delete #{@movie.title}?" } %></h2>
 <% if @movie.reviews.size > 0 %>
 	<h3>Avg. Rating: <%= @movie.review_average %>/10</h3>
 	<% else %>
