bootstrap stying applied, will do more

--- a/rotten_mangoes/app/assets/stylesheets/application.css.scss
+++ b/rotten_mangoes/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,12 @@
 
 @import 'bootstrap';
 
+body {
+	background-color: #FFF;
+	background-image: url("grey-textile.jpg");
+	width: 100%;
+}
+
+.navbar-form {
+	width: 100rem;
+}
