--- a/rotten_mangoes/app/views/layouts/_footer.html.erb
+++ b/rotten_mangoes/app/views/layouts/_footer.html.erb
@@ -1,14 +1,7 @@
 <footer>
-  <small>
-    <% if current_user %>
-      Signed in as <%= current_user.full_name %> (<%= link_to "Log out", session_path("current"), method: :delete %>)
-      	<% if User.find(session[:user_id]).admin %> 
-      	 	| ADMIN: <%= link_to "User Management", admin_users_path %> |
-    	 	<% end %>
-    <% else %>
-      <%= link_to "Log In", new_session_path %> | <%= link_to "Sign Up", new_user_path %>
-    <% end %>
+<div class="footer-copyright"><small>© Christopher Chan 2014</small></div>
+   
     <br><br>
     <hr>
-  </small>
+
 </footer>
