--- a/rotten_mangoes/app/views/movies/edit.html.erb
+++ b/rotten_mangoes/app/views/movies/edit.html.erb
@@ -1,4 +1,6 @@
-<%= link_to "Back to this movie", movie_path(@movie) %>
+<div class="form-partial">
+	<%= link_to "Back to this movie", movie_path(@movie) %>
 
-<h2>Edit this movie.</h2>
-<%= render 'form' %>
+	<h2>Edit this movie.</h2>
+	<%= render 'form' %>
+</div>
